# charlie-code

./: README.md  main.py  pyproject.toml
src/: agent.py  environment.py  model.py  skills.py
src/config/: default.yaml
tests/: test_agent.py  test_json_output.py  test_model.py  test_resume.py  test_skills.py  test_smoke.py
